--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,10 +3,389 @@ element {
   --custom-deep-blue: #1a202c;
 }
 
+.moblie-BackGround {
+  display: grid;
+  grid-template-rows: auto 15vh auto 85vw auto auto;
+  background-color: #4a5568;
+  width: 100vw;
+
+  .mobile-imageContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .mobile-firstImage {
+      position: relative;
+      right: 45vw;
+      width: 200vw;
+    }
+  }
+
+  .mobile-secondContainer {
+    width: 100vw;
+    grid-column: 1;
+    grid-row: 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
+    bottom: 15vh;
+  }
+
+  .mobile-thirdContainer {
+    z-index: 1;
+    grid-column: 1;
+    grid-row: 2;
+    height: 100%;
+    background-color: #1a202c;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100vw;
+
+    .mobile-homePageTitleGridContainer {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: 3fr 1fr;
+      height: 100%;
+      width: 100vw;
+
+      .mobile-homePageTitleContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        .mobile-homePageTitle1 {
+          color: #17a0df;
+          font-size: 8vw;
+          padding: 0;
+          margin: 0;
+        }
+
+        .mobile-homePageTitle2 {
+          color: #17a0df;
+          font-size: 7vw;
+          padding: 0;
+          margin: 0;
+        }
+      }
+
+      .mobile-homePageMessageContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .mobile-homePageMessage {
+          color: #17a0df;
+          font-size: 4vw;
+        }
+      }
+    }
+  }
+
+  .mobile-fourthContainerWaves {
+    grid-column: 1;
+    grid-row: 3;
+    height: 100%;
+    max-width: 100vw;
+    z-index: 1;
+  }
+
+  .mobile-fourthContainer {
+    grid-column: 1;
+    grid-row: 3;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    width: 100vw;
+    background-color: #1a202c;
+
+    .mobile-fourthContainer-content-container {
+      width: 100vw;
+      height: 100%;
+      max-height: 100%;
+      display: flex;
+      grid-area: 1 / 1 / 1 / 2;
+
+      .mobile-fourthContainer-content {
+        color: aliceblue;
+        padding-left: 7vw;
+        padding-right: 7vw;
+        padding-top: 2vw;
+        font-size: 4vw;
+        font-weight: 600;
+      }
+    }
+
+    .mobile-thirdContainerLeft {
+      grid-column: 1;
+      grid-row: 1;
+      width: 50vw;
+      position: relative;
+      transition: 2s;
+      height: 100%;
+      width: 60vw;
+      display: grid;
+      grid-template-columns: 5fr 1fr;
+
+      .mobile-leftRect {
+        background-color: orangered;
+        width: 100%;
+        height: 100%;
+      }
+
+      .mobile-leftTri {
+        width: 10vw;
+
+        .mobile-tri {
+          width: 0;
+          height: 0;
+          border-top: 60vw solid yellow;
+          border-right: 10vw solid transparent;
+        }
+      }
+    }
+
+    .mobile-thirdContainerLeftInside {
+      right: 47vw;
+    }
+    .mobile-thirdContainerLeftOutside {
+      right: 0vw;
+    }
+
+    .mobile-thirdContainerRight {
+      grid-column: 2;
+      grid-row: 1;
+      width: 50vw;
+      position: relative;
+      transition: 2s;
+      height: 100%;
+      width: 60vw;
+      display: grid;
+      grid-template-columns: 1fr 5fr;
+
+      .mobile-rightRect {
+        background-color: pink;
+        width: 100%;
+        height: 100%;
+      }
+
+      .mobile-rightTri {
+        width: 10vw;
+
+        .mobile-tri {
+          width: 0;
+          height: 0;
+          border-top: 60vw solid yellow;
+          border-right: 10vw solid transparent;
+        }
+      }
+    }
+
+    .mobile-thirdContainerRightInside {
+      right: 13vw;
+    }
+    .mobile-thirdContainerRightOutside {
+      right: 60vw;
+    }
+  }
+
+  .mobile-fifthContainer {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+
+    grid-column: 1;
+    grid-row: 4;
+    height: 100%;
+    max-width: 100vw;
+    z-index: 1;
+    background-color: #1a202c;
+
+    .mobile-orbit-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      grid-column: 1;
+      grid-row: 1;
+    }
+
+    .mobile-orbit {
+      width: 80vw;
+      transform: scaleX(0.01) scaleY(0.01);
+    }
+
+    .mobile-orbit-animation {
+      animation-name: orbitPopUpRotation, rotation;
+      animation-duration: 10s, 10s;
+      animation-delay: 0s, 10s; /* add this */
+      animation-timing-function: linear, linear;
+      animation-iteration-count: 1, infinite;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes orbitPopUpRotation {
+      0% {
+        transform: rotate(0deg) scaleX(0.01) scaleY(0.01);
+      }
+      8% {
+        transform: rotate(28.8deg) scaleX(1.1) scaleY(1.1);
+      }
+      10% {
+        transform: rotate(36deg) scaleX(1) scaleY(1);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes orbitPopUp {
+      0% {
+        transform: scaleX(0.01) scaleY(0.01);
+      }
+      85% {
+        transform: scaleX(1.1) scaleY(1.1);
+      }
+      100% {
+        transform: scaleX(1) scaleY(1);
+      }
+    }
+
+    @keyframes rotation {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    .mobile-globe-container-container {
+      grid-column: 1;
+      grid-row: 1;
+      width: 100vw;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .mobile-globe-container {
+      width: 70vw;
+      transition: 1s;
+      transform: scaleX(0.01) scaleY(0.01);
+      grid-column: 1;
+      grid-row: 1;
+    }
+
+    .mobile-globe-container-animation {
+      animation: globePopUp 1s linear 0s 1 forwards;
+    }
+
+    @keyframes globePopUp {
+      0% {
+        transform: scaleX(0.01) scaleY(0.01);
+      }
+      85% {
+        transform: scaleX(1.1) scaleY(1.1);
+      }
+      100% {
+        transform: scaleX(1) scaleY(1);
+      }
+    }
+  }
+
+  .mobile-sixthContainer {
+    grid-column: 1;
+    grid-row: 5;
+    height: 100%;
+    max-width: 100vw;
+    z-index: 1;
+    background-color: #1a202c;
+    color: white;
+
+    .mobile-main-topics {
+      display: flex;
+      justify-content: center;
+    }
+
+    .the-main {
+      width: 100vw;
+      font-size: 100%;
+
+      display: flex;
+      justify-content: center;
+    }
+
+    .topic-list-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .topic-list {
+        width: 80vw;
+        display: grid;
+        grid-template-columns: 1fr 10fr;
+        grid-template-rows: auto;
+      }
+
+      .centerOy {
+        display: flex;
+        align-items: center;
+        padding-left: 2vw;
+        // margin-top: 2vw;
+        padding-top: 2vw;
+        padding-bottom: 2vw;
+        font-weight: 600;
+      }
+
+      .paddinTop {
+        padding-top: 1vw;
+        padding-bottom: 0;
+      }
+
+      .list {
+        display: flex;
+        flex-direction: column;
+
+        .padding-left {
+          padding-left: 5vw;
+        }
+      }
+    }
+  }
+
+  .mobile-seventhContainer {
+    background-color: #1a202c;
+    width: 100vw;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .implications {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .content {
+      display: grid;
+      width: 80vw;
+    }
+  }
+}
+
 .desktopBackGround {
   display: grid;
-  grid-template-rows: 100vh 10vh 20vh 60vh 100vh;
-  background-color: #4a5568;
+  grid-template-rows: auto 10vh 20vh 60vh 60vh;
+  // background-color: #4a5568;
   width: 100vw;
 
   .firstImageContainer {
@@ -24,42 +403,29 @@ element {
       grid-column: 1;
       grid-row: 1;
       display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      height: 100vh;
-      width: 100vw;
+      height: auto;
+      width: auto;
       overflow: visible;
 
       .firstImage {
-        width: 1920px;
-        height: 1080px;
-
+        width: 100vw;
         position: relative;
-        top: 10vh;
-      }
-
-      @media only screen and (max-width: 1900px) {
-        .firstImage {
-          height: 100vh;
-          position: relative;
-          top: 0vh;
-        }
       }
     }
   }
 
   .secondContainer {
-    z-index: 1;
+    width: 100vw;
+    // z-index: 1;
     grid-column: 1;
-    grid-row: 1;
-    height: 110vh;
-    // width: 1920px;
+    grid-row: 2;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
   }
 
   .thirdContainer {
+    z-index: 1;
     grid-column: 1;
     grid-row: 3;
     height: 100%;
@@ -280,11 +646,10 @@ element {
           width: 50vw;
           background-color: orange;
           display: flex;
-          // justify-content: center;
           align-items: center;
 
           .sexualHealthImg {
-            height: 50vh;
+            width: 40vw;
           }
         }
 
@@ -314,7 +679,13 @@ element {
     grid-row: 5;
     height: 100%;
     display: flex;
+    background-color: #1a202c;
   }
+}
+
+.globe-contaiener {
+  // width: 20vw;
+  // height: 20vw;
 }
 
 .plusIcon {
@@ -328,6 +699,9 @@ element {
 
 .waves {
   // transform: scaleY(0.6);
+  width: 100vw;
+  position: relative;
+  top: 5px;
 }
 
 .cls-1 {
