--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,7 +5,7 @@ element {
 
 .moblie-BackGround {
   display: grid;
-  grid-template-rows: auto 15vh auto 85vw auto auto;
+  grid-template-rows: auto 15vh auto 85vw auto auto 30vh;
   background-color: #4a5568;
   width: 100vw;
 
@@ -134,6 +134,15 @@ element {
         background-color: orangered;
         width: 100%;
         height: 100%;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        .sexual-image {
+          padding-top: 12vw;
+          width: 43vw;
+        }
       }
 
       .mobile-leftTri {
@@ -170,6 +179,15 @@ element {
         background-color: pink;
         width: 100%;
         height: 100%;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        .health-image {
+          padding-top: 12vw;
+          width: 40vw;
+        }
       }
 
       .mobile-rightTri {
@@ -192,6 +210,17 @@ element {
     }
   }
 
+  .wave1 {
+    grid-column: 1;
+    grid-row: 4;
+    width: 100vw;
+    max-width: 100vw;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    background-color: #1a202c;
+  }
+
   .mobile-fifthContainer {
     display: grid;
     grid-template-columns: auto;
@@ -202,7 +231,7 @@ element {
     height: 100%;
     max-width: 100vw;
     z-index: 1;
-    background-color: #1a202c;
+    // background-color: #1a202c;
 
     .mobile-orbit-container {
       display: flex;
@@ -299,14 +328,23 @@ element {
     }
   }
 
+  .waves2 {
+    grid-column: 1;
+    grid-row: 5;
+    z-index: 3;
+    display: flex;
+    align-items: flex-end;
+  }
+
   .mobile-sixthContainer {
     grid-column: 1;
     grid-row: 5;
     height: 100%;
     max-width: 100vw;
     z-index: 1;
-    background-color: #1a202c;
+    background-color: #253551;
     color: white;
+    margin-bottom: 50vw;
 
     .mobile-main-topics {
       display: flex;
@@ -361,6 +399,8 @@ element {
   }
 
   .mobile-seventhContainer {
+    grid-column: 1;
+    grid-row: 6;
     background-color: #1a202c;
     width: 100vw;
     color: white;
@@ -378,6 +418,34 @@ element {
     .content {
       display: grid;
       width: 80vw;
+      font-weight: 600;
+
+    }
+  }
+
+  .mobile-waves-footer {
+    grid-column: 1;
+    grid-row: 7;
+    z-index: 4;
+    width: 100vw;
+  }
+
+  .footer {
+    grid-column: 1;
+    grid-row: 7;
+    background-color: #6691f7;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100vw;
+
+    .facebook-icon-container {
+      width: 10vw;
+    }
+    .instagram-icon-container {
+      width: 10vw;
     }
   }
 }
@@ -385,7 +453,6 @@ element {
 .desktopBackGround {
   display: grid;
   grid-template-rows: auto 10vh 20vh 60vh 60vh;
-  // background-color: #4a5568;
   width: 100vw;
 
   .firstImageContainer {
@@ -416,7 +483,6 @@ element {
 
   .secondContainer {
     width: 100vw;
-    // z-index: 1;
     grid-column: 1;
     grid-row: 2;
     display: flex;
