--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,14 @@ element {
   --custom-deep-blue: #1a202c;
 }
 
+// svg {
+// 	width: 100%;
+// 	height: 100%;
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// }
+
 .moblie-BackGround {
   display: grid;
   grid-template-rows: auto 15vh auto 85vw auto auto 30vh;
@@ -370,6 +378,11 @@ element {
         display: grid;
         grid-template-columns: 1fr 10fr;
         grid-template-rows: auto;
+
+        .icon {
+          max-width: 8vw;
+          max-height: 8vw;
+        }
       }
 
       .centerOy {
@@ -419,7 +432,6 @@ element {
       display: grid;
       width: 80vw;
       font-weight: 600;
-
     }
   }
 
