--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,14 +3,6 @@ element {
   --custom-deep-blue: #1a202c;
 }
 
-// svg {
-// 	width: 100%;
-// 	height: 100%;
-// 	position: absolute;
-// 	top: 0;
-// 	left: 0;
-// }
-
 .moblie-BackGround {
   display: grid;
   grid-template-rows: auto 15vh auto 85vw auto auto 30vh;
@@ -280,6 +272,34 @@ element {
       }
     }
 
+    @-moz-keyframes orbitPopUpRotation {
+      /* older versions of FF */
+      0% {
+        -moz-transform: rotate(0deg) scaleX(0.01) scaleY(0.01);
+      }
+      8% {
+        -moz-transform: rotate(28.8deg) scaleX(1.1) scaleY(1.1);
+      }
+      10% {
+        -moz-transform: rotate(36deg) scaleX(1) scaleY(1);
+      }
+      100% {
+        -moz-transform: rotate(360deg);
+      }
+    }
+
+    @-moz-keyframes orbitPopUp {
+      0% {
+        -moz-transform: scaleX(0.01) scaleY(0.01);
+      }
+      85% {
+        -moz-transform: scaleX(1.1) scaleY(1.1);
+      }
+      100% {
+        -moz-transform: scaleX(1) scaleY(1);
+      }
+    }
+
     @keyframes orbitPopUp {
       0% {
         transform: scaleX(0.01) scaleY(0.01);
@@ -362,7 +382,6 @@ element {
     .the-main {
       width: 100vw;
       font-size: 100%;
-
       display: flex;
       justify-content: center;
     }
@@ -376,7 +395,7 @@ element {
       .topic-list {
         width: 80vw;
         display: grid;
-        grid-template-columns: 1fr 10fr;
+        grid-template-columns: 1fr 7fr;
         grid-template-rows: auto;
 
         .icon {
@@ -389,7 +408,6 @@ element {
         display: flex;
         align-items: center;
         padding-left: 2vw;
-        // margin-top: 2vw;
         padding-top: 2vw;
         padding-bottom: 2vw;
         font-weight: 600;
@@ -445,19 +463,86 @@ element {
   .footer {
     grid-column: 1;
     grid-row: 7;
-    background-color: #6691f7;
-
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-
+    flex-direction: column;
     width: 100vw;
+    padding-bottom: 2vw;
+    background-color: #aedfff;
 
-    .facebook-icon-container {
-      width: 10vw;
+    .facebook-insta-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 5vw;
+
+      .facebook-icon-container {
+        width: 10vw;
+        height: 10vw;
+        background-color: aliceblue;
+        z-index: 7;
+
+        .anchor {
+          z-index: 7;
+          width: 10vw;
+          height: 10vw;
+
+          .anchor-button {
+            width: 10vw;
+            height: 10vw;
+            border: none;
+            padding: 0;
+          }
+        }
+      }
+
+      .instagram-icon-container {
+        width: 10vw;
+        height: 10vw;
+        z-index: 8;
+
+        .anchor-insta {
+          z-index: 8;
+          width: 10vw;
+          height: 10vw;
+
+          .anchor-button-insta {
+            width: 10vw;
+            height: 10vw;
+            border: none;
+            padding: 0;
+            background-color: transparent;
+          }
+        }
+      }
     }
-    .instagram-icon-container {
-      width: 10vw;
+
+    .email-container {
+      display: flex;
+      justify-content: center;
+      gap: 2vw;
+
+      .email-icon-container {
+        width: 10vw;
+        height: 10vw;
+      }
+
+      .email {
+        padding: 0;
+        margin: 0;
+        color: #17a0df;
+        display: flex;
+        align-items: center;
+      }
+    }
+
+    .osm-logo-container {
+      width: 50vw;
+
+      .osm-logo {
+        width: 50vw;
+      }
     }
   }
 }
