--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -8,6 +8,9 @@ body {
   border: 1px solid black;
 }
 
+.button-bar {
+}
+
 .OxCenter {
   display: flex;
   justify-content: center;
@@ -105,17 +108,19 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  .applyNowPageGridContainerMobile {
+  .apply-now-container {
     display: flex;
     justify-content: center;
     background-color: #4a5568;
-    // border: 1px solid white;
+    width: 100vw;
+    height: 100vh;
 
-    .applyNowPageGridMobile {
+    .apply-now-grid {
       display: grid;
       grid-template-columns: auto;
-      grid-template-rows: 2vh 3vh 16vh auto ;
-      margin-top: 8vh;
+      grid-template-rows: auto auto auto auto;
+      margin-top: 7vh;
+      height: max-content;
 
       .titleContainerMobile {
         font-size: 5vw;
@@ -123,64 +128,44 @@ body {
         font-weight: 700;
         color: #d8e0e9;
         filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
+        margin-bottom: 2vh;
       }
 
-      .countDownContainerMobile {
-        filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
+      .button-bar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        gap: 10vw;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
 
-        .counterContainerMobile {
-          display: grid;
-          grid-template-rows: auto;
-          grid-template-columns: auto 2vw auto 2vw auto 2vw auto 2vw auto;
-          background-color: rgb(173, 216, 230);
-          border-radius: 3vw;
-          width: 95vw;
-          padding: 1vw;
+        .form-btn {
+          border: 3px solid #72c2eb;
+          border-radius: 5px;
+          background-color: transparent;
 
-          .cardContainerMobile {
-            margin-top: 1vh;
-            display: grid;
-            grid-template-columns: auto;
-            grid-template-rows: auto auto;
-            // border: 1px solid black;
+          color: #72c2eb;
+          font-weight: 800;
+          font-size: 5vw;
+        }
 
-            .counterCardMobile {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              background-color: #72c2eb;
-              border-radius: 1vw;
-              width: 15vw;
-              height: 15vw;
-              font-size: 10vw;
-              font-weight: 600;
-              color: white;
-              margin-left: auto;
-              margin-right: auto;
-            }
+        .form-btn:hover {
+          border: 3px solid #72c2eb;
+          border-radius: 5px;
+          background-color: transparent;
+          background-color: #cfd8e4;
 
-            .cardLabelMobile {
-              color: white;
-              font-size: 3.4vw;
-              margin-top: 0.1vh;
-              margin-bottom: 0.1vh;
-            }
-          }
-
-          .pointsMobile {
-            font-size: 10vw;
-            color: white;
-            margin-bottom: 2vh;
-            font-weight: 600;
-          }
+          color: #72c2eb;
+          font-weight: 800;
+          font-size: 5vw;
         }
       }
 
-      .paperContainerMobile {
-        // margin-top: 5vh;
+      .container-form-mobile {
         height: max-content;
 
-        .iframeContainerMobile {
+        .iframe-container-mobile {
           width: 100%;
           height: max-content;
 
