--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -1,3 +1,28 @@
+.committees-backgroud {
+  background-color: #4a5568;
+  display: grid;
+  grid-template-rows: min-content auto ;
+  
+  .world-map-container {
+    margin-top: 6vh;
+    max-width: 100vw;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .committees-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    gap: 2vh;
+    // padding-bottom: 10vh;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   .committeesPageContainerMobile {
     display: flex;
