--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -1,8 +1,8 @@
 .committees-backgroud {
   background-color: #4a5568;
   display: grid;
-  grid-template-rows: min-content auto ;
-  
+  grid-template-rows: min-content auto;
+
   .world-map-container {
     margin-top: 6vh;
     max-width: 100vw;
@@ -23,6 +23,55 @@
   }
 }
 
+.committees-web-backgroud {
+  background-color: #4a5568;
+  display: grid;
+  grid-template-rows: min-content auto;
+  width: 100vw;
+  height: 100vh;
+
+  .committees-web-page-grid {
+    display: grid;
+    grid-template-rows: auto;
+
+    .map-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 6vh;
+      animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
+
+      .wordMapSvg {
+        transform: scale(calc(1.11));
+      }
+    }
+
+    .descriptions-list {
+
+      
+    }
+  }
+
+  .committees-web-page-container {
+    margin-top: 6vh;
+    max-width: 100vw;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .web-committees-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    gap: 2vh;
+    // padding-bottom: 10vh;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   .committeesPageContainerMobile {
     display: flex;
@@ -30,7 +79,7 @@
     align-items: center;
     height: auto;
     background-color: #4a5568;
-    border: 1px solid white;
+    // border: 1px solid white;
   }
 
   .OxCenter {
