--- a/src/pages/committees/descriptions/Afro/Afro-styles.scss
+++ b/src/pages/committees/descriptions/Afro/Afro-styles.scss
@@ -4,14 +4,12 @@
   width: 90vw;
   padding: 2vw;
   border-radius: 2vh;
+}
 
-  .AFRO-content {
-    .AFRO-image-container {
-      width: 90vw;
-
-      .AFRO-Image {
-        width: 90vw;
-      }
-    }
-  }
+.AFRO-web-page-card {
+  background-color: #253551;
+  color: white;
+  width: auto;
+  padding: 2vw;
+  border-radius: 2vh;
 }
