--- a/src/pages/committees/descriptions/Euro/Euro-styles.scss
+++ b/src/pages/committees/descriptions/Euro/Euro-styles.scss
@@ -5,3 +5,12 @@
   padding: 2vw;
   border-radius: 2vh;
 }
+
+
+.web-page-card {
+  background-color: #253551;
+  color: white;
+  width: auto;
+  padding: 2vw;
+  border-radius: 2vh;
+}
