--- a/src/pages/committees/descriptions/Searo/Searo-styles.scss
+++ b/src/pages/committees/descriptions/Searo/Searo-styles.scss
@@ -5,3 +5,11 @@
   padding: 2vw;
   border-radius: 2vh;
 }
+
+.SEARO-web-page-card {
+  background-color: #253551;
+  color: white;
+  width: auto;
+  padding: 2vw;
+  border-radius: 2vh;
+}
