--- a/src/pages/committees/descriptions/Wpro/Wpro-styles.scss
+++ b/src/pages/committees/descriptions/Wpro/Wpro-styles.scss
@@ -5,3 +5,10 @@
   padding: 2vw;
   border-radius: 2vh;
 }
+.WPRO-mobile-page-card {
+  background-color: #253551;
+  color: white;
+  width: auto;
+  padding: 2vw;
+  border-radius: 2vh;
+}
