--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -176,7 +176,7 @@ element {
       grid-template-columns: 1fr 5fr;
 
       .mobile-rightRect {
-        background-color: pink;
+        background-color: orange;
         width: 100%;
         height: 100%;
 
@@ -749,7 +749,7 @@ element {
       width: 50vw;
 
       .web-rightRect {
-        background-color: pink;
+        background-color: orange;
         width: 100%;
         height: 100%;
         display: flex;
