--- a/src/pages/about_us/about-us.scss
+++ b/src/pages/about_us/about-us.scss
@@ -3,14 +3,102 @@
   .aboutUsPageContainer {
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: #4a5568;
 
+    background: rgb(65, 120, 142);
+    background: linear-gradient(
+      180deg,
+      rgba(65, 120, 142, 1) 0%,
+      rgba(60, 80, 124, 1) 30%,
+      rgba(60, 80, 124, 1) 55%,
+      rgba(83, 76, 106, 1) 100%
+    );
+    align-items: center;
+
     width: 100vw;
-    height: 100vh;
+    height: auto;
+
+    color: aliceblue;
+    font-weight: 600;
 
     .aboutUsPageGrid {
-      margin-top: 10vh;
+      margin: 3vw;
+      margin-top: 6vh;
+
+      margin-bottom: 0;
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      align-items: center;
+
+      .about-us-content {
+        width: 700px;
+        margin-top: 20vh;
+        margin-bottom: 20vh;
+        display: flex;
+        flex-direction: column;
+        gap: 10vh;
+
+        .web-card {
+          display: grid;
+
+          .content {
+            grid-column: 1;
+            grid-row: 1;
+            background-color: #1a202c;
+            padding: 3vh;
+            border-radius: 3vh;
+            z-index: 2;
+          }
+
+          .title {
+            grid-column: 1;
+            grid-row: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            transition-duration: 1s;
+            bottom: 10vh;
+
+            .title-inner-container {
+              background-color: #1a202c;
+              padding: 3vh;
+              border-radius: 3vh;
+            }
+          }
+
+          .title-up {
+            grid-column: 1;
+            grid-row: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            bottom: 18vh;
+            transition-duration: 2s;
+          }
+
+          .title-up2 {
+            grid-column: 1;
+            grid-row: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            bottom: 26vh;
+            transition-duration: 2s;
+          }
+
+          .title-up3 {
+            grid-column: 1;
+            grid-row: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            bottom: 22vh;
+            transition-duration: 2s;
+          }
+        }
+      }
     }
   }
 }
