--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -24,31 +24,86 @@
 }
 
 .committees-web-backgroud {
-  background-color: #4a5568;
+  background-color: #0d48af;
+  background: rgb(65, 120, 142);
+  background: linear-gradient(
+    180deg,
+    rgba(65, 120, 142, 1) 0%,
+    rgba(60, 80, 124, 1) 30%,
+    rgba(60, 80, 124, 1) 55%,
+    rgba(83, 76, 106, 1) 100%
+  );
   display: grid;
   grid-template-rows: min-content auto;
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
 
   .committees-web-page-grid {
     display: grid;
     grid-template-rows: auto;
 
-    .map-container {
+    .map-container-container {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 6vh;
+      margin-top: 8vh;
       animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
+
+      .map-container {
+        width: 90vw;
+      }
 
       .wordMapSvg {
         transform: scale(calc(1.11));
       }
     }
 
-    .descriptions-list {
+    .descriptions-list-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
 
-      
+      .descriptions-list {
+        display: flex;
+        flex-direction: column;
+        gap: 5vh;
+        width: 50vw;
+        padding: 10vh;
+
+        .description-list-item {
+          display: grid;
+          .description-container {
+            grid-column: 1;
+            grid-row: 1;
+            position: relative;
+            left: 0vw;
+            transition-duration: 2s;
+          }
+
+          .description-container-right {
+            left: 10vw;
+          }
+
+          .description-map-container {
+            grid-column: 1;
+            grid-row: 1;
+            width: 50%;
+            position: relative;
+            right: 0vw;
+            transition-duration: 2s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #253551;
+            border-radius: 20px;
+          }
+
+          .description-map-container-left {
+            right: 13vw;
+          }
+        }
+      }
     }
   }
 
