--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -5,6 +5,15 @@
     height: 100vh;
     background-color: #4a5568;
 
+    background: rgb(65, 120, 142);
+    background: linear-gradient(
+      180deg,
+      rgba(65, 120, 142, 1) 0%,
+      rgba(60, 80, 124, 1) 30%,
+      rgba(60, 80, 124, 1) 55%,
+      rgba(83, 76, 106, 1) 100%
+    );
+
     .schedulePageGridContainer {
       margin-top: 8vh;
       display: grid;
