--- a/src/pages/committees/descriptions/Wpro/Wpro-styles.scss
+++ b/src/pages/committees/descriptions/Wpro/Wpro-styles.scss
@@ -5,7 +5,8 @@
   padding: 2vw;
   border-radius: 2vh;
 }
-.WPRO-mobile-page-card {
+
+.WPRO-web-page-card {
   background-color: #253551;
   color: white;
   width: auto;
