--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -88,7 +88,7 @@
           .description-map-container {
             grid-column: 1;
             grid-row: 1;
-            width: 50%;
+            width: 25vw;
             position: relative;
             right: 0vw;
             transition-duration: 2s;
