--- a/src/pages/about_us/about-us.scss
+++ b/src/pages/about_us/about-us.scss
@@ -80,7 +80,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            bottom: 245px;
+            bottom: 225px;
             transition-duration: 2s;
           }
 
@@ -105,6 +105,14 @@
     display: flex;
     justify-content: center;
     background-color: #4a5568;
+    background: rgb(65, 120, 142);
+    background: linear-gradient(
+      180deg,
+      rgba(65, 120, 142, 1) 0%,
+      rgba(60, 80, 124, 1) 30%,
+      rgba(60, 80, 124, 1) 55%,
+      rgba(83, 76, 106, 1) 100%
+    );
     align-items: center;
 
     width: 100vw;
