--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -31,6 +31,15 @@ body {
     background-repeat: repeat;
     background-size: 50%;
     background-color: #4a5568;
+    background-color: #1a202c;
+    background: rgb(65, 120, 142);
+    background: linear-gradient(
+      180deg,
+      rgba(65, 120, 142, 1) 0%,
+      rgba(60, 80, 124, 1) 30%,
+      rgba(60, 80, 124, 1) 55%,
+      rgba(83, 76, 106, 1) 100%
+    );
   }
 
   .applyNowPageGridContainer {
@@ -164,6 +173,14 @@ body {
     display: flex;
     justify-content: center;
     background-color: #4a5568;
+    background: rgb(65, 120, 142);
+    background: linear-gradient(
+      180deg,
+      rgba(65, 120, 142, 1) 0%,
+      rgba(60, 80, 124, 1) 30%,
+      rgba(60, 80, 124, 1) 55%,
+      rgba(83, 76, 106, 1) 100%
+    );
     width: 100vw;
     height: 100vh;
 
