--- a/src/pages/committees/descriptions/Emro/Emro-styles.scss
+++ b/src/pages/committees/descriptions/Emro/Emro-styles.scss
@@ -1,5 +1,5 @@
 .EMRO-mobile-page-card {
-  background-color: #1a202c;
+  background-color: #253551;
   color: white;
   width: 90vw;
   padding: 2vw;
