--- a/src/pages/login/components/navbar/navbar-component.scss
+++ b/src/pages/login/components/navbar/navbar-component.scss
@@ -128,7 +128,7 @@
   overflow: visible;
 
   .menu-btn-list {
-    background-color: #4a5568;
+    background-color: #253551;
     height: 100vh;
     display: flex;
     align-items: flex-start;
@@ -137,7 +137,7 @@
     gap: 1vh;
     padding: 1vh;
     .menu-list-item {
-      background-color: #2d3848;
+      background-color: #1a202c;
       border-radius: 1vh;
       width: 100%;
       height: 7vh;
