--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -46,7 +46,7 @@ element {
     .mobile-homePageTitleGridContainer {
       display: grid;
       grid-template-columns: auto;
-      grid-template-rows: 3fr 1fr;
+      grid-template-rows: 50% 25% 25%;
       height: 100%;
       width: 100vw;
 
@@ -58,14 +58,14 @@ element {
 
         .mobile-homePageTitle1 {
           color: #17a0df;
-          font-size: 8vw;
+          font-size: 7vw;
           padding: 0;
           margin: 0;
         }
 
         .mobile-homePageTitle2 {
           color: #17a0df;
-          font-size: 7vw;
+          font-size: 6vw;
           padding: 0;
           margin: 0;
         }
@@ -80,6 +80,13 @@ element {
           color: #17a0df;
           font-size: 4vw;
         }
+      }
+
+      .mobile-homePageDateContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #17a0df;
       }
     }
   }
@@ -116,6 +123,12 @@ element {
         padding-top: 2vw;
         font-size: 4vw;
         font-weight: 600;
+      }
+
+      .title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
 
@@ -630,13 +643,12 @@ element {
         }
       }
 
-      .home-page-date{
+      .home-page-date {
         display: flex;
         justify-content: center;
         align-items: center;
         color: #17a0df;
         font-size: 5vh;
-
       }
     }
 
@@ -713,7 +725,7 @@ element {
         margin-left: 4vh;
         margin-right: 4vh;
 
-        .title{
+        .title {
           display: flex;
           justify-content: center;
         }
