--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -4,11 +4,24 @@ body {
   height: 100%;
 }
 
-.debug {
-  border: 1px solid black;
+.button-bar {
 }
 
-.button-bar {
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.content-center {
+  justify-content: center;
 }
 
 .OxCenter {
@@ -50,16 +63,203 @@ body {
     min-height: 100vh;
 
     .applyNowPageGrid {
-      display: grid;
-      grid-template-columns: auto;
-      grid-template-rows: 10vh 30vh auto auto;
-      margin-top: 10vh;
+      margin-top: 7vh;
+      display: flex;
+      flex-direction: column;
       font-weight: 600;
 
-      //!
+      .apply-now-title-container {
+        height: min-content;
+
+        .titleContainer {
+          font-size: 50px;
+          margin: 0;
+          font-weight: 700;
+          color: #cfd8e4;
+          filter: drop-shadow(0.5vh 0.5vh 0.5vh rgb(43, 43, 43));
+        }
+      }
+
+      .apply-now-fee-bar {
+        padding-top: 30px;
+        .fee-container {
+          width: 100vw;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .fee-card {
+            width: 220px;
+            height: 180px;
+            border-radius: 15px;
+            margin-left: 30px;
+            margin-right: 30px;
+            padding: 5px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+
+            &.bronze {
+              background-color: #cd7f32;
+              background: linear-gradient(90deg, #f1a151 0%, #bb6917 100%);
+              width: auto;
+              height: 100px;
+              display: flex;
+              flex-direction: column;
+            }
+
+            &.silver {
+              background-color: #c0c0c0;
+              background: linear-gradient(90deg, #586270 0%, #9ca3af 100%);
+              background: linear-gradient(
+                155deg,
+                #e5ebf2 0%,
+                rgb(168, 168, 168) 100%
+              );
+
+              width: auto;
+              height: 115px;
+              display: flex;
+              flex-direction: column;
+            }
+
+            &.gold {
+              background-color: #ffd700;
+              background: linear-gradient(90deg, #fcc931 0%, #ffa81b 100%);
+              width: auto;
+              height: 130px;
+              display: flex;
+              flex-direction: column;
+            }
+
+            .fee-card-title {
+              font-size: x-large;
+              margin-left: 5px;
+            }
+
+            .fee-circle-container {
+              height: 0px;
+              .fee-circle {
+                background-color: red;
+                border-radius: 50%;
+                position: relative;
+                width: 60px;
+                height: 60px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                bottom: 60px;
+                left: 180px;
+                font-size: 25px;
+                font-weight: 700;
+              }
+            }
+
+            .list-container {
+              padding-top: 0px;
+              padding-left: 5px;
+
+              &.bronze {
+                color: #854404;
+                text-shadow: 1px 1px 4px #ec963f;
+              }
+              &.silver {
+                color: #838383;
+                text-shadow: 1px 1px 4px #9c9c9c;
+              }
+              &.gold {
+                color: #ca8300;
+                text-shadow: 1px 1px 4px #d78c00;
+              }
+
+              .fee-details {
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                // text-shadow: 1px 1px 4px #ec963f;
+              }
+
+              .fee-details-subitem {
+                // color: #f8f9fa;
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                font-size: 13px;
+                // text-shadow: 1px 1px 4px #ec963f;
+              }
+            }
+
+            .padding-left {
+              padding-left: 20px;
+            }
+
+            .check-item {
+              color: #00c138;
+            }
+            .cross-item {
+              color: #f4202d;
+            }
+          }
+
+          .price-list-container {
+            color: #a75300;
+            display: flex;
+            height: 100%;
+
+            .bronze-text {
+              color: #a75300;
+              padding-right: 10px;
+              border-right: 1px solid #a75300;
+            }
+
+            .silver-text {
+              color: #838383;
+              padding-right: 10px;
+              border-right: 1px solid #838383;
+            }
+
+            .gold-text {
+              color: #ca8300;
+              padding-right: 10px;
+              border-right: 1px solid #d78c00;
+            }
+          }
+
+          .price-container {
+            display: flex;
+
+            .price-euro {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              font-size: 30px;
+              padding-bottom: 15px;
+            }
+          }
+
+          .price {
+            font-size: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 700;
+          }
+          .price-bronze {
+            font-size: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 700;
+            // color: #a75300;
+          }
+        }
+        .no-accommodation {
+          display: flex;
+          justify-content: center;
+          color: white;
+          font-size: 20px;
+        }
+      }
 
       .web-timer-containier {
-        // width: 80vh;
       }
 
       .explanation-container {
@@ -69,14 +269,6 @@ body {
           color: white;
           font-size: 3vh;
         }
-      }
-
-      .titleContainer {
-        font-size: 50px;
-        margin: 0;
-        font-weight: 700;
-        color: #cfd8e4;
-        filter: drop-shadow(0.5vh 0.5vh 0.5vh rgb(43, 43, 43));
       }
 
       .countDownContainer {
@@ -219,7 +411,7 @@ body {
         margin-bottom: 1vh;
       }
 
-      .explanation-container{
+      .explanation-container {
         margin-top: 1vh;
         display: flex;
         flex-direction: column;
